--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
         isMobile = true;
       }
 
-      let w = 1920;
-      let h = 1080;
+      let w = 800;
+      let h = 600;
       if (false) {
         w = window.innerWidth;
         h = window.innerHeight;
@@ -43,6 +43,10 @@
       width: w,
       height: h,
       backgroundColor: "#000000",
+      physics: {
+        default: "arcade",
+        arcade: { debug: true },
+      },
       scene: {
         preload: preload,
         create: create,
@@ -56,13 +60,58 @@
       },
     };
 
-    var controls;
     var game = new Phaser.Game(gameConfig);
 
-    function preload() {}
+    function preload() {
+      this.load.image("flower", "assets/flower-exo.png");
+      this.load.image("cursor", "assets/drawcursor.png");
+    }
 
-    function create() {}
+    function create() {
+      var socket = io();
 
-    function update() {}
+      socket.on("chat", function (msg) {});
+
+      this.source = this.physics.add.image(100, 300, "flower");
+
+      this.target = new Phaser.Math.Vector2();
+
+      const cursor = this.add.image(0, 0, "cursor").setVisible(false);
+
+      this.distanceText = this.add.text(10, 10, "Click to set target", {
+        fill: "#00ff00",
+      });
+
+      this.input.on("pointerdown", (pointer) => {
+        this.target.x = pointer.x;
+        this.target.y = pointer.y;
+
+        // Move at 200 px/s:
+        this.physics.moveToObject(this.source, this.target, 200);
+
+        cursor.copyPosition(this.target).setVisible(true);
+      });
+    }
+
+    function update() {
+      //  4 is our distance tolerance, i.e. how close the source can get to the target
+      //  before it is considered as being there. The faster it moves, the more tolerance is required.
+      const tolerance = 4;
+
+      // const tolerance = 200 * 1.5 / this.game.loop.targetFps;
+
+      const distance = Phaser.Math.Distance.BetweenPoints(
+        this.source,
+        this.target
+      );
+
+      if (this.source.body.speed > 0) {
+        this.distanceText.setText(`Distance: ${distance}`);
+
+        if (distance < tolerance) {
+          this.source.body.reset(this.target.x, this.target.y);
+        }
+      }
+    }
   </script>
 </html>
